# Dielectric_scattering

./: CMakeLists.txt  diel_scat_func.cpp  diel_scat_func.h  dielectric_scattering.cpp
Input/: Grid.gr  Im_g.gv  Re_g.gv
